--- a/md文档/引用新技术点.md
+++ b/md文档/引用新技术点.md
@@ -1,7 +1,17 @@
 引用新技术点
 
-guava本地缓存
-pageHelper 分页插件
+- guava本地缓存
+
+- pageHelper 分页插件
+
+- easyexcel 文档导入导出   https://github.com/alibaba/easyexcel/
+
+- swagger2 doc文件复制md文档
+
+- 阿里cola statemachine
+  [https://github.com/alibaba/COLA/tree/master/cola-components/cola-component-statemachine]
+
+  
 
 ```
 <dependency>
