--- a/md文档/study/elk/ELk学习笔记-2022.md
+++ b/md文档/study/elk/ELk学习笔记-2022.md
@@ -1,4 +1,4 @@
-### 一、入门操作
+### 一、入门操作(ElasticSearch 7.x)
 
 下载地址：https://www.elastic.co/cn/downloads/
 
@@ -531,5 +531,230 @@ pom依赖
     }
 ```
 
-#### 3.环境搭建
+#### 3.环境搭建-集群
 
+##### 1.拷贝目录
+
+复制三份elasticSearch文件夹， 修改config 下 elasticsearch.yml，依次启动
+
+master节点
+
+```
+# ---------------------------------- Cluster -----------------------------------
+#
+cluster.name: my-application
+# ------------------------------------ Node ------------------------------------
+node.name: node-1001
+node.master: true
+node.data: true
+
+# ---------------------------------- Network -----------------------------------
+network.host: 127.0.0.1
+http.port: 1001
+transport.tcp.port: 9301
+
+# ---------------------------------- Security ----------------------------------
+
+http.cors.enabled: true
+http.cors.allow-origin: "*"
+```
+
+slave节点
+
+```
+# ======================== Elasticsearch Configuration =========================
+# ---------------------------------- Cluster -----------------------------------
+#
+cluster.name: my-application
+# ------------------------------------ Node ------------------------------------
+node.name: node-1002
+node.master: true
+node.data: true
+
+# ---------------------------------- Network -----------------------------------
+network.host: 127.0.0.1
+http.port: 1002
+transport.tcp.port: 9302
+#集群间通信 seed_hosts以,分隔
+discovery.seed_hosts: ["127.0.0.1:9301"]
+discovery.zen.fd.ping_timeout: 1m
+discovery.zen.fd.ping_retries: 5
+# ---------------------------------- Security ----------------------------------
+http.cors.enabled: true
+http.cors.allow-origin: "*"
+```
+
+##### 2.http访问
+
+get  http://127.0.0.1:1001/_cluster/health
+
+get  http://127.0.0.1:1001/_cat/nodes
+
+### 二、进阶核心
+
+#### 1.进阶概念
+
+master节点，其他节点，分片，副本 ，  主分片，副本分片
+
+创建两个分片一个副本  put	http://127.0.0.1:1001/users
+
+```
+{
+    "settings":{
+        "number_of_shards":2,
+        "number_of_replicas":1
+    }
+}
+```
+
+索引太大了，数据通过哈希算法拆分到多个分片中，每个分片部署在不同node里，并且可以设置副本
+
+写数据写到主分片，主分片再通知其他分片写
+
+读数据通过路由到数据所在分片或副本读取
+
+#### 2.elasticSearch Head   chrome 插件
+
+能够看es集群状态   kibana也行
+
+![image-20220913172919650](elasticSearchHead.png)
+
+#### 3.倒排索引
+
+词条：索引中最小存储单元和查询单元
+
+词典：词条的集合，b+ , hashMap
+
+倒排表：
+
+#### 4.文档刷新刷写--创建查询索引过程
+
+![](luyou.png)
+
+首先通过路由算法定位到分片，分片写完再同步写入副本
+
+下面为写入分片的细节
+
+![](搜索过程.png)
+
+创建索引，到内存中，然后分段同步到OS Cache，最后同步到磁盘
+
+log避免机器宕机，内存数据丢失做的类似mysql  binlog的东西
+
+查询是可以先查询OS Cathe然后再查磁盘
+
+#### 5.文档分析
+
+http://127.0.0.1:9200/_analyze    get
+
+```
+{
+    "analyzer":"standard",
+    "text":"Text to analyze"
+}
+```
+
+中文有个  IK分词器，  不需要每个汉字分词
+
+下载解压放到ela  的plugins目录下
+
+另外支持自定义词典
+
+自定义分词器
+
+### 三、文档展示kibana
+
+![](kibana.png)
+
+下载 https://www.elastic.co/cn/downloads/past-releases/kibana-7-17-6
+
+解压 config/kibana.yml 添加
+
+```
+server.port: 5601
+elasticsearch.hosts: ["https://localhost:9200"]
+# 索引名
+kibana.index: ".kibana"
+#支持中文
+i18n.locale: "zh-CN"
+```
+
+http://localhost:5601/
+
+
+
+### 四、es框架集成
+
+#### 1.springdata  es
+
+框架版本限制  https://docs.spring.io/spring-data/elasticsearch/docs/4.2.0/reference/html/#preface.requirements
+
+![](version.png)
+
+```
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
+
+```
+
+五、优化
+
+1、分片策略
+
+分片只能是创建索引的时候指定， 副本可以后面增加
+
+2、路由选择
+
+文档应该放在哪个分片中，  带路由查询
+
+3、写入速度优化
+
+Lucene是采用分段写入的方式，段过大的时候会合并，合理采用分段合并策略；
+
+减少refresh的次数，这个是从内存写入到OS cathe（文件缓存）中；
+
+加大Flush设置，Os cathe 写入侧畔
+
+减少副本的数量；
+
+4、内存设置
+
+堆内存不要超过32G
+
+5、重要配置
+
+### 五、面试题
+
+1.更新和删除文档的流程
+
+都是写入操作，把之前的标志为删除，在合并段写入时过滤；
+
+2.文档写入查询流程
+
+参考二-4
+
+3、数据结构
+
+字典树-tire树
+
+
+
+### 六、Elasticsearch 8.x  
+
+#### 1.安装与使用
+
+jdk 17    号称最快的jdk
+
+es软件下载  https://www.elastic.co/cn
+
+安装kibana
+
+#### 2.索引操作-kibana
+
+操作参考文档
+
+https://www.elastic.co/guide/cn/kibana/current/docker.html
+
+![](kibana_controller.png)
