--- a/md文档/前端/前端大全.md
+++ b/md文档/前端/前端大全.md
@@ -358,6 +358,28 @@ Proxy error: Could not proxy request /%PUBLIC_URL%/manifest.json from localhost:
 "proxy": "http://127.0.0.1:8003",
 ```
 
+#### 部署运维日志
+
+1.前端是nginx转发到静态资源部署访问；
+
+2.后端是spring-boot默认内嵌了tomcat服务器，启动jar包部署访问；
+
+
+
+#### 部署方法
+
+1.前后端不分离：前端放在spring项目的resources下，并且打包成war包，而不是可执行jar包，war包放在tomcat目录下，启动tomcat访问；   这是 spring-boot没出来前的打包方式
+
+2.前后端分离： 前端可以使用nginx/tomcat部署:   tomcat/nginx都是一种web服务器，因为直接访问计算器是访问不了的
+
+(1) 前端react项目build文件夹复制到tomcat目录下，启动tomcat;
+
+(2) 前端build文件夹复制到服务器上，配置nginx转发规则
+
+
+
+注意：jar包类型分为可执行jar包和依赖jar包，依赖jar包比较小，几百k。可执行jar包就几百m
+
 ### 技术点积累
 
 #### state&props
