--- a/md文档/架构方案/架构解决方案.md
+++ b/md文档/架构方案/架构解决方案.md
@@ -14,7 +14,45 @@
 
 ### 2.1 依赖放通降级
 
+#### 2.1.1 服务放通
+
+比如用户鉴权中心出问题，提供基于短信，邮件，验证码，历史登录记录，缓存其他能证明用户信息等操作放通登录
+
+#### 2.1.2 缓存数据
+
+依赖服务异常，通过缓存查缓存，同时可以实现自动恢复，熔断器等操作
+
+#### 2.1.3 redis降级
+
+redis宕机时，降级到JVM缓存，实时监听redis的心跳，保障服务及时恢复
+
+不可用达到某个阈值后，切换本地缓存，避免缓存击穿、缓存雪崩
+
 ### 2.2 过载控制
+
+#### 2.2.1 接口过载
+
+接口自动流控
+
+#### 2.2.2 数据库SQL流控
+
+对慢SQL进行流控，提供数据库引擎侧的限流能力，用户在数据库管理平台配置限流规则
+
+#### 2.2.3 mybatis文件 慢SQL扫描
+
+codecheck对 mybatis文件进行规则扫描，识别风险，减少发布后的慢SQL的问题
+
+#### 2.2.4 负载不均衡
+
+由于负载不均衡导致集群不分示例OOM，自研限流模块精细化控制流程，通过重试使各示例负载均衡
+
+#### 2.2.5 数据库流量过载
+
+读写分离，读从库，减轻主库压力和IO
+
+#### 2.2.6 过载之熔断
+
+调用方主动停止调用
 
 ### 2.3 弹性
 
@@ -38,12 +76,6 @@ CPU使用率配置：大于等于峰值CPU使用率 且<90%
 
 ### 2.4 爆炸半径控制
 
-#### 2.4.1 桶双region 
-
-上传任务实现双region，  双写到双region，读取优先主region
-
-单边上传故障，上传到另一边，同事task定时任务记录失败，定时同步失败的到另一边
-
 ### 2.5 容灾多活
 
 #### 2.5.1  网关双通道 
@@ -58,13 +90,26 @@ xx1.com 故障由业务代码自动切换 xx2.com 副集群
 
 优势： 对代码侵入性小：引入组件后，只需增加配置信息，无需开发额外代码
 
+#### 2.5.3 文件上传桶双写
+
+上传时双写到两个regin的桶，单边写入，定时任务同步到另一边
+
 ### 2.6 数据可靠性
+
+数据库建表语句和数据语句，分库导入到其他集群，保证可恢复
 
 ### 2.7 极限生存
 
+个人开发环境不可用，切换个人安全PC啥的
+
 ### 2.8 变更管理
+
+灰度发布等流水线操作 设置特定人员操作
 
 ### 2.9 故障发现
 
+故障监控告警，关键作业场景和作业流的核心页面，数据
+
 ### 3.0 故障恢复
 
+配合健康检测，使容器能够故障自愈能力，自动重启啥的
