--- a/md文档/项目/项目简历详解.md
+++ b/md文档/项目/项目简历详解.md
@@ -12,13 +12,17 @@
 
 ​			之前是用AtomicInteger 后面acurator出问题后就不能用这个了
 
+​			一分钟两次定时任务
+
 ​			使用两个 copyOnWriteList ，前一次，前前一次， 每个list记录出问题的节点的master IP，每次将前一次的list复制到前前一次的list，如果两个list同时出现相同的master节点，说明某个master节点连续两次出现问题，判断开启降级   ->  修改一个AtimocBoolean的值， aop切redisUtil如果这个值=false则抛出一个异常，redisUtil 所有方法默认都会  tryCatch异常，实现redis不阻塞 
 
 ​		如果两个list都为空，说明此时已经恢复，则恢复AtimocBoolean的值
 
 ​	
 
-​	slave不是会自动切换上去么？为什么要要整个断？   系统比较重要，保证完全可用性；BUG分区了，salve没有主背切换
+​	slave不是会自动切换上去么？为什么要要整个断？   slave切换上去了又挂了
+
+​	为什么一分钟两次，可以容忍这么多的可用性丢失么？ 1.应对演练够用了  2. redis集群这种情况基本不会发生，本身redis集群就是高可用，时间当然可以设置短一些，这样可以减少性能损耗
 
 ### 2. 用户信息熔断器降级模块
 
@@ -63,6 +67,45 @@ open()  再次调用用户系统，如果失败则进入闭路状态，否则自
 这演练其实更多是为了配合，真实情况一般不开启自动开启熔断器的逻辑，因为说是要结合公司的运维平台，实现运维自动化，所以没写相关代码，当出现用户中心问题时，让运维手动人工开启。
 
 ### 3. webclient
+
+对比webclient和其他几个http client客户端
+
+好处：对每个事件配置一个线程，只有响应就绪了才会执行
+
+reactive响应式编程
+
+- 非阻塞响应式IO，单位时间内有限资源下支持更高的并发量。
+- 支持使用Java8 Lambda表达式函数。
+- 支持同步、异步、Stream流式传输。
+
+
+
+用到哪些
+
+1. 异常透传.onStatus(HttpStatus::isError, clientResponse -> Mono.empty()) 
+2. 响应体大小设置 默认buffer 256 k 容易溢出
+3. ssl配置
+4. 连接超时和读取超时 ， 由各个系统自己设置
+5. provider自定义线程池 最大线程池数，最大队列数，最大等待空闲时间
+
+```
+  			ConnectionProvider provider = ConnectionProvider.builder("webClient").maxConnections(500)
+                .maxIdleTime(Duration.ofSeconds(20)) // 能够防止connection reset
+                .maxLifeTime(Duration.ofSeconds(60))
+                .pendingAcquireTimeout(Duration.ofSeconds(60)).evictInBackground(Duration.ofSeconds(120)).build();
+```
+
+```
+resp.publishOn(Schedulers.elastic())//切换到Schedulers.elastic()对应的线程池进行处理
+                .onErrorMap(throwable -> {
+                    System.out.println("onErrorMap:" + throwable.getLocalizedMessage());
+                    return throwable;
+                }).subscribe(s -> System.out.println("result:" + Thread.currentThread().getName() + " " + s));
+
+......block()// 如果是block方式，则不会占用netty的io 默认的CPU个数的selector线程(只负责发请求)，而使用的是服务器tomcat的io线程处理后面逻辑
+```
+
+
 
 
 
