--- a/md文档/项目/项目简历详解.md
+++ b/md文档/项目/项目简历详解.md
@@ -1,6 +1,18 @@
 项目简历详解
 
+## 忌讳
 
+华为项目不要说**并发不高**， 高可用网关就说只是前期刚做，所以QPS大概200，但是是稳定的，后期接入了达到2000是没问题的，目前自己的压测能够达到6000  1C2G，如果是4C8G估计能达到10万并发
+
+就说多的时候1千，少的时候50晚上，后期5000至上万是没问题的 ， 一个月可能几亿条数据，分表粒度还可能更大，或者改用es
+
+100 - 6000 - 360000 - 8640000   
+
+jvm 优化， youngGC太频繁，年老代不断增加，适当调大young区，让minGc能更快回收
+
+**是否有C端经验**
+
+说有，不要说只有一点，而且说明C端并没有想象中这么难，更多是分布式锁+一些业务回滚
 
 ## 华为
 
@@ -25,6 +37,8 @@
 ​	为什么一分钟两次，可以容忍这么多的可用性丢失么？ 1.应对演练够用了  2. redis集群这种情况基本不会发生，本身redis集群就是高可用，时间当然可以设置短一些，这样可以减少性能损耗
 
 ### 2. 用户信息熔断器降级模块
+
+人工打开一个定时任务降级
 
 2.对用户登录信息获取系统宕机的高可用演练，设计**熔断器降级模块**，redis 存储用户短期 token 信息，闭路开路实现开启降级后**自动恢复**，判断 IP 等实现安全性
 
@@ -187,6 +201,15 @@ execute()
 正常请求http调用   缓存调用等  备份地址  熔断等
 ```
 
+### 5. 问题
+
+#### 5.1 为什么不用高性能的 kafka用MQ
+
+1.  项目里用了rocketMq
+2. rocketMq可靠性更好，可以消息不丢失和不重复投递
+
+
+
 ## 酷派
 
 ### 1. 导出导入离线系统
@@ -194,6 +217,10 @@ execute()
 主要是导出，针对数据量过大,通过生成多个excel文件先写入磁盘 List<File> < 所有对象都在内存，并打成一个zip压缩包上传到云文件桶， 提供下载.   通过mybatis游标查询，每1万条数据合生成一个File 
 
 如果是导入，可以设置一个有界队列，到达数量的时候存入数据库，list.clear() ,  easyexcel有这个功能
+
+
+
+模板+策略模式
 
 
 
