--- a/md文档/项目/项目简历详解.md
+++ b/md文档/项目/项目简历详解.md
@@ -14,6 +14,10 @@ jvm 优化， youngGC太频繁，年老代不断增加，适当调大young区，
 
 说有，不要说只有一点，而且说明C端并没有想象中这么难，更多是分布式锁+一些业务回滚
 
+**不要说什么策略模式也挺简单的**
+
+只是自己觉得简单，是因为自己强，话不要多说
+
 ## 华为
 
 ### 1. **redis 降级整改**
@@ -354,6 +358,276 @@ public class DemoDataListener implements ReadListener<ExcelDemo> {
 
 状态流转机器
 
+履约中心：原始交易单（MQ存） ， 订单， 发货单，  快递单， 快递包裹
+
+
+
+#### 3.1 相关订单状态
+
+```
+交易单被拆单完就是完成状态，后面发货就是订单和发货单相关的事情
+public enum TradeStatusEnum implements IEnum<Integer> {
+
+    INIT_TRADE(1, "初始交易单"), //
+
+    WAITING_AUDIT(100, "待审核"),
+
+    WAITING_SPLIT(200, "待拆单"),
+
+    WAITING_SHIPPING(300, "等待发货"), // 拆交易单
+
+    SHIPPING(500, "发货中"),
+
+    WAITING_FOR_RECEIVE(600, "等待收货"), // 发货回调
+
+    COMPLETE(1000, "已完成"), // 用户点确认
+
+    CLOSE(-1000, "已关闭"),
+
+    ;
+```
+
+
+
+```
+   订单状态
+  
+  INIT_ORDER(1, "初始订单"),
+    /**
+     * 待审核
+     */
+    WAIT_AUDIT(100, "待审核"),
+    /**
+     * 已拆单完成，子订单 已拆分
+     */
+    ORDER_SPLITED(200, "已拆单"),
+    /**
+     * 已合并发货单  订单合并为发货单
+     */
+    SHIPMENT_MERGED(260, "发货单已合并"),
+    /**
+     * 仓库已接单
+     */
+    WMS_ACCEPTED(300, "仓库已接单"),
+    /**
+     * 已筛单，分配快递单号
+     */
+    EXPRESS_ASSIGNED(500, "已筛单"),
+    /**
+     * 仓库已发货,快递已发出
+     */
+    WMS_SHIPPED(600, "快递已发出"),
+    /**
+     * 快递员确认已送达
+     */
+    EXPRESS_DELIVERED(800, "快递已送达"),
+    /**
+     * 收货人确认已签收 / 订单已完成
+     */
+    CONSIGNEE_SIGNED(1000, "已完成"),
+    /**
+     * 异常订单
+     */
+    EXCEPTION(-100, "异常订单-发网缺货-拦截"),
+    /**
+     * 订单已取消
+     */
+    CANCELED(-1000, "已取消"),
+    ;
+```
+
+```
+ 发货单 状态
+     INIT(1, "初始发货单"),
+    SHIPMENT_WAIT(100, "等待筛单"),
+    WAIT_ASSIGNED(400, "等待发货"), // OrderStatusEnum  500
+    WMS_SHIPPED(800, "已发货"), // OrderStatusEnum  600
+    EXPRESS_DELIVERED(1000, "已完成"),
+    CANCELED(-1000, "已取消"),
+    ;
+```
+
+
+
+#### 3.3 拆实物订单
+
+每个流程都是定时任务
+
+单个 交易单->  单个父订单
+
+```
+SplitTradeToOrderTask.splitTradeToOrderTask ->SplitTradeAction
+先把交易单所有商品列表展开 
+交易单状态-> 等待发货
+订单状态  ->  初始订单
+```
+
+单个父订单 -> 单个子订单(选了仓库，扣减了库存)
+
+```
+StandardShipmentOrderTask. splitOrderTask -> SplitOrderAction
+
+先择仓库，选计算每个sku在 单个仓库都满足的仓库
+扣减真实库存，加上分布式锁， 调库存中心http接口，如果后面代码逻辑有失败，则回滚库存
+
+子订单状态  ->  已拆单
+父订单状态 parent_id=1  -> 取消
+```
+
+
+
+子订单  -> 合并订单至发货单
+
+```
+StandardShipmentOrderTask.mergeOrderTask  ->mergeOrderTask
+按照订单group分组后，每个组一个发货单
+发货单状态  -> 初始发货单
+子订单状态  >  已拆单
+
+     * 订单分组
+     * 同一个用户 相同发货仓 相同销售渠道 相同收货人姓名、手机号、详细地址 合并发货
+    public String groupingByOrderMerge() {
+        return getWmsCode() + getOuterRdcCode() + getDcCode() + getUserId() + getChannelCode()
+                + consignee.getName() + consignee.getTel() + consignee.getAddress();// fixme
+    }
+    
+    // 如果出错了，直接用这个不合单
+    public String groupingByOrderId() {
+        return getOrderId().toString();// fixme 使用ID  不合并订单
+    }
+
+```
+
+
+
+发货单 扫1万条 -> 发货
+
+```
+StandardShipmentOrderTask.shippingOrderTask  -> ShippingOrderAction
+发网或者 恒达  创建发货单
+
+子订单状态  >  仓库已接单
+发货单状态  > 等待筛单
+```
+
+
+
+发网订单确认回调接口
+
+```
+订单（已筛单） +  发货单状态（等待发货）
+```
+
+
+
+定时任务查询订单状态
+
+```
+FineexShipmentProcessGetTask
+
+订单 -> 快递已发出
+发货单  -> 已发货
+```
+
+#### 3.3 发网发快递
+
+发快递方式： 恒达  + 发网
+
+发网发货回调履约中心， 修改订单（已筛单） +  发货单状态（等待发货）
+
+发网收货回调
+
+发网退货回调 ， 履约中心修改相关状态 + 回滚库存   调库存中心接口
+
+
+
+```
+发网相关接口
+
+创建发货单
+取消发货单
+订单流转数据查询接口
+退货单创建接口
+退货单取消接口
+快递物流详情查询接口
+```
+
+
+
+#### 3.5 状态机
+
+除了定时任务各个阶段去扫描，当一个流程流转完，返回的订单ID可以直接执行下一个流程，所以是一个链路同时执行的
+
+```
+/**
+ * 待拆单
+ */
+WAITING_SPLIT(StandardOrderShippingEventEnum.SPILT_ORDER),
+/**
+ * 待合并
+ */
+WAITING_MERGE(StandardOrderShippingEventEnum.MERGE_ORDER),
+/**
+ * 待发货
+ */
+WAITING_SHIPPING(StandardOrderShippingEventEnum.SHIPPING_ORDER),
+;
+```
+
+#### 3.4 拆虚拟订单
+
+```
+SyncTradeMqListener 监听交易单并且入库 
+-> SplitTradeToOrderTask  定时任务，交易单取1万条进行拆单
+-> SplitVirTradeAction   虚拟单拆单逻辑  ，拆弹不成功状态不变，下一次还会继续被扫描出来拆单
+
+```
+
+
+
+```
+/**
+ * 订单分组
+ * 同一个用户 相同发货仓 相同销售渠道 相同收货人姓名、手机号、详细地址 合并发货
+ *
+ * @return
+ */
+```
+
+#### 3.5 话费充值
+
+提供 adk , 这边只需要填入appSecret 即可
+
+充值后回调，这边修改状态，不是很难
+
+
+
+虚拟订单拆分后  会根策略模式  根据 该单的交易类型 判断走哪个虚拟商品履约
+
+具体确认了什么虚拟交易后，  会策略模式选择对应供应商，比如花费充值有多个供应商可以提供充值接口， 从redis中拿到key去找对应供应商充值话费
+
+
+
+拆单如果失败会通知交易中心
+
+```
+    PHONE_RECHARGE(1, "花费充值", "phoneRechargeHandler", "fulfillment:phone:recharge:type", "recharge"),
+    FLOW_RECHARGE(2, "流量充值", "flowRechargeHandler", "fulfillment:flow:recharge:type", "recharge"),
+    VIDEO_AIQIYI(3, "爱奇艺黄金会员", "videoAQYHandler", "fulfillment:video:aiqiyi:type", "recharge"),
+    VIDEO_TENGXUN(4, "腾讯视频VIP", "videoTCHandler", "fulfillment:video:tengxun:type", "recharge"),
+    VIDEO_YOUKU(5, "优酷黄金会员", "videoYKHandler", "fulfillment:video:youku:type", "recharge"),
+    ENVELOPE_MEITUAN(6, "美团外卖红包", "envelopMTHandler", "fulfillment:envelope:meituan:type", "recharge"),
+    CARD_KENGDEJI(7, "肯德基礼品卡", "cardKDJHandler", "fulfillment:card:kengdeji:type", "card"),
+    CARD_JINGDONG(8, "京东E卡", "cardJDHandler", "fulfillment:card:jingdong:type", "card"),
+```
+
+```
+orderHandlerMap.get(OrderChildTypeEnum.getHandler(existOrder.getOrderChildType())).execute(existOrder);
+
+supplyHandlerMap.get(SupplyEnum.getHandler(getSupplyKey(OrderChildTypeEnum.PHONE_RECHARGE.getRedisKey())))
+       .execute(order, OrderChildTypeEnum.PHONE_RECHARGE);
+```
+
 
 
 ### 4. 支付和退款
@@ -382,15 +656,69 @@ payNotify 微信回调
 如果通知失败则采用回调表定时任务检查的方式;
 ```
 
-退款逻辑
+**退款逻辑**
 
 ```
 交易中心 -> 支付网关refund 接口  支付单号，退款单号-交易中心生成，退款金额，回调交易中心URL
 
 refund接口 -> 校验所有的退款成功的单号，如果总退款金额>当前支付单号金额，则不给退款  
        -> 调微信预退款， 成功返回状态设置 PENDING状态，等待微信成功退款后回调
-
+       
+ 
 refundNotify 接口-> 微信退款回调， 此时也要回调交易中心，如果失败就加入流水记录表回调
+```
+
+**金额校验逻辑**
+
+下面原先的代码是有问题的，如果同时多个退款请求，可能会造成退多的情况,， 但是因为交易中心用户取消交易单的逻辑已经加了分布式锁，所以同时只会有一个请求进来退款，没有问题
+
+因为没有涉及扣减，只是涉及数据库条数，所以没有用mysql相关的锁
+
+```
+   private RefundOrder checkAndBuildRefund(RefundPaymentCmd cmd,Payment payment){
+        // 查询所有退款成功单，检验可退款金额
+        // PayStatus.SUCCEED.getValue() + , PayStatus.PENDing.getValue()  如果有一个在退款中，这里也不能让之预退款
+        // 查到的同时需要锁定，这里需要加分布式锁，不可以让同一个支付流水同时多个退款申请同时进行
+        List<RefundOrder> refundList=refundOrderRepository.queryListByPaymentId(payment.getId(), PayStatus.SUCCEED.getValue());
+        Long refundSum=0L;
+        for (RefundOrder order:refundList){
+            refundSum+=order.getRefundAmount();
+        }
+        refundSum+=cmd.getRefundAmount();
+        if (refundSum.compareTo(payment.getAmount())>0){
+            throw new BizException(ExceptionCode.REFUND_AMOUNT_IS_WRONG.getCode(),ExceptionCode.REFUND_AMOUNT_IS_WRONG.getDesc());
+        }
+```
+
+或者悲观锁 for update  将查询所有记录和校验的逻辑放到一个@Transactional 里
+
+```
+ /**
+     * 添加事务
+     * @param productId
+     * @return
+     */
+    @Transactional // 让下面的查询和修改在同一个事务里
+    @Override
+    public String deductStock(Integer productId) {
+       Stock stock = stockMapper.selecStockForUpdate(productId);
+       if(stock != null && stock.getStockNum() > 0 ){
+           stock.setStockNum(stock.getStockNum() -1);
+           int updateCount = stockMapper.updateById(stock);
+           if (updateCount > 0 ){
+               return "扣减库存成功";
+           }else{
+               return "扣减失败";
+           }
+       }
+       return "库存库存失败:商品库存不存在或者库存为0";
+    }
+    
+    
+       @Select("SELECT * FROM test.stock where product_id = #{productId} for update")
+    Stock selecStockForUpdate(Integer productId);
+
+
 ```
 
 ### 5. 转单中心
@@ -407,7 +735,7 @@ refundNotify 接口-> 微信退款回调， 此时也要回调交易中心，如
 
 存入转单中心交易数据库
 
-s
+
 
 **excel转单 upload接口 **    PlatformTradeController.upload接口
 
@@ -562,3 +890,148 @@ create table `third_trade_call_log`
     ReflectionUtils.findMethod(feign.getClass(), workflowEnum.getNotifyMethod(), WorkflowNotifyGO.class);
 ```
 
+### 8. 库存中心简介 
+
+下单扣减销售库存逻辑
+
+```
+   @Transactional(rollbackFor = Exception.class)
+    public SingleResponse execute(ReduceStockCmd reduceStockCmd) {
+        log.info("reduceSalesStockCmd---{}", reduceStockCmd);
+        ReduceStockCO reduceStockCO = convert(reduceStockCmd);
+        boolean flag = false;
+        //查询对应的销售库存列表
+        for (ReduceStockCO.SkuInfo skuInfo : reduceStockCO.getSkuList()) {
+            flag = false;
+            String reduceSalesKeyBySku = lockKey + skuInfo.getSku();
+            if (redissLockUtils.tryLock(reduceSalesKeyBySku, waitTime)) {
+                try {
+                    List<SalesStock> salesStocks = salesStockRepository.findDcCode(reduceStockCO.getChannelCode(), skuInfo.getSku());
+                    for (SalesStock salesStock : salesStocks) {
+                        //扣减第一个满足的销售库存
+                        StockAreaBo stockAreaBo = BeanConvertUtils.convertTo(reduceStockCO, StockAreaBo.class);
+                        if (checkIsInArea(stockAreaBo, salesStock) && checkAndReduce(salesStock, reduceStockCO.getTradeNo(), skuInfo.getAmount())) {
+                            flag = true;
+                            break;
+                        }
+                    }
+                } catch (Exception e) {
+                    log.error("reduceSalesStock-error", e);
+                    flag = false;
+                } finally {
+                    redissLockUtils.unlock(reduceSalesKeyBySku);
+                }
+            } else {
+                return SingleResponse.buildFailure(ErrorEnum.STOCK_OPERATE_HOT.getCode(), "商品太火爆,请稍后重试");
+            }
+            if (!flag) {
+                return SingleResponse.buildFailure(ErrorEnum.STOCK_NOT_ENOUGH.getCode(), ErrorEnum.STOCK_NOT_ENOUGH.getMsg());
+            }
+        }
+        if (flag) {
+            log.info("reduceSalesStock success");
+            return SingleResponse.buildSuccess();
+        }
+        return SingleResponse.buildFailure(ErrorEnum.STOCK_NOT_ENOUGH.getCode(), ErrorEnum.STOCK_NOT_ENOUGH.getMsg());
+    }
+```
+
+扣减SQL
+
+and amount>=#{amount}
+
+这有点类似乐观锁，但是这里不关心连续修改，只要能修改就行，不用version=version+1
+
+```
+@Update("update sales_stock set amount = amount-#{amount} where dc_code=#{dcCode} and channel_code=#{channelCode} and sku = #{sku} and amount>=#{amount}")
+```
+
+
+
+```
+CREATE TABLE `sales_stock`
+(
+  `id` bigint(0) NOT NULL AUTO_INCREMENT COMMENT '主键ID',
+  `channel_code` varchar(64) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL COMMENT '库存渠道编码',
+  `dc_code` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL COMMENT 'VDC编码',
+  `sku` varchar(64) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL COMMENT 'sku',
+  `amount` int(0) NOT NULL COMMENT '库存数量',
+  `create_time` datetime(0) NOT NULL COMMENT '创建时间',
+  `update_time` datetime(0) DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
+  PRIMARY KEY (`id`) USING BTREE
+);
+
+CREATE TABLE `real_stock`
+(
+    `id`             bigint(20) NOT NULL AUTO_INCREMENT COMMENT '主键ID',
+    `dc_code`        varchar(64) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL COMMENT '仓库ID',
+    `sku`            varchar(64) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL COMMENT 'sku编码',
+    `remain_amount`  int(10) NULL DEFAULT 0 COMMENT '可售库存',
+    `lp_amount`      int(10) NULL DEFAULT 0 COMMENT '良品库存',
+    `cp_amount`      int(10) NULL DEFAULT 0 COMMENT '次品库存',
+    `transit_amount` int(10) NULL DEFAULT 0 COMMENT '在途库存',
+    `sync_time`      datetime NULL DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '数据同步时间',
+    `create_time`    datetime NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    PRIMARY KEY (`id`) USING BTREE,
+    INDEX            `k_dc_code`(`dc_code`) USING BTREE,
+    INDEX            `k_sku`(`sku`) USING BTREE
+) ENGINE = InnoDB AUTO_INCREMENT = 0 CHARACTER SET = utf8 COLLATE = utf8_general_ci COMMENT = '库存表 --- 真实仓库库存' ROW_FORMAT = Dynamic;
+```
+
+### 9. 交易中心简介
+
+```
+AbstractPlaceTemplate
+
+        // 下单锁  平台+销售渠道+上游订单号+用户ID
+        String lockKey = RedisKeys.PLACE_TRADE_KEY + trade.getFromPlatform() + ":"
+                + trade.getSalesChannelEnum() + ":" + trade.getUpstreamTradeId() + ":" + trade.getUserId();
+        if (!redissLockUtils.tryLock(lockKey, 0)) {
+            throw new BizException(ResponseError.PLACE_TRADE_ERROR.getCode(), "重复下单异常");
+        }
+
+        try {
+            // 填充商品信息
+            this.fillGoodsInfo(trade);
+
+            // 限购
+            this.restrictBuy(trade);
+
+            // 金额计算
+            this.calculateAmount(trade, cmd.getCouponCodes());
+
+            // 金额校验
+            this.checkSubmitAmount(cmd, trade);
+
+            try {
+                // 资源扣减（库存、活动、优惠券等）
+                this.deductResource(trade);
+
+                // 现金和积分支付
+                this.payment(trade);
+
+                // 创建交易单
+                this.createTrade(trade);
+
+                // 发送消息
+                this.sendMsg(trade);
+
+                return this.buildResult(cmd, trade);
+            } catch (Exception e) {
+                log.error("placeTradeError. trade={}, cmd={}", JsonUtils.objToJson(trade), JsonUtils.objToJson(cmd), e);
+                try {
+                    // 回滚所有资源
+                    this.rollbackAllResource(trade);
+                } catch (Exception ex) {
+                    log.error("placeTradeError rollbackAllResource error. tradeId={}", trade.getTradeId(), ex);
+                }
+                if (e instanceof BizException) {
+                    throw e;
+                }
+                throw new BizException(ResponseError.PLACE_TRADE_ERROR.getCode(), "网络异常，请稍后重试");
+            }
+        } finally {
+            redissLockUtils.unlock(lockKey);
+        }
+
+```
