--- a/md文档/项目/项目简历详解.md
+++ b/md文档/项目/项目简历详解.md
@@ -18,6 +18,12 @@ jvm 优化， youngGC太频繁，年老代不断增加，适当调大young区，
 
 只是自己觉得简单，是因为自己强，话不要多说
 
+
+
+1s单核并发为什么能有5000
+
+因为固定的压测接口，是网关webclient调用一个写好的立刻返回的接口，是正常请求策略
+
 ## 华为
 
 ### 1. **redis 降级整改**
