--- a/md文档/项目/项目简历详解.md
+++ b/md文档/项目/项目简历详解.md
@@ -44,7 +44,7 @@ jvm 优化， youngGC太频繁，年老代不断增加，适当调大young区，
 
 ​	slave不是会自动切换上去么？为什么要要整个断？   slave切换上去了又挂了
 
-​	为什么一分钟两次，可以容忍这么多的可用性丢失么？ 1.应对演练够用了  2. redis集群这种情况基本不会发生，本身redis集群就是高可用，时间当然可以设置短一些，这样可以减少性能损耗
+​	为什么一分钟两次，可以容忍这么多的可用性丢失么？ 1.应对演练够用了  2. redis集群这种情况基本不会发生，本身redis集群就是高可用，时间当然可以设置短一些，这样可以减少性能损耗 3. 时间太短可能不是真的有问题，可能网络波动，太长就达不到可用性效果
 
 ### 2. 用户信息熔断器降级模块
 
@@ -468,7 +468,7 @@ SplitTradeToOrderTask.splitTradeToOrderTask ->SplitTradeAction
 订单状态  ->  初始订单
 ```
 
-单个父订单 -> 单个子订单(选了仓库，扣减了库存)
+单个父订单 -> 单个子订单(选了仓库，扣减了库存)   1对1
 
 ```
 StandardShipmentOrderTask. splitOrderTask -> SplitOrderAction
@@ -482,11 +482,11 @@ StandardShipmentOrderTask. splitOrderTask -> SplitOrderAction
 
 
 
-子订单  -> 合并订单至发货单
+子订单  -> 合并订单至发货单  多对一
 
 ```
 StandardShipmentOrderTask.mergeOrderTask  ->mergeOrderTask
-按照订单group分组后，每个组一个发货单
+按照订单group分组后，每个组一个发货单,相当于一个组可能有多个子订单，每个子订单对应一个发货单
 发货单状态  -> 初始发货单
 子订单状态  >  已拆单
 
@@ -589,20 +589,9 @@ SyncTradeMqListener 监听交易单并且入库
 
 ```
 
-
-
-```
-/**
- * 订单分组
- * 同一个用户 相同发货仓 相同销售渠道 相同收货人姓名、手机号、详细地址 合并发货
- *
- * @return
- */
-```
-
 #### 3.5 话费充值
 
-提供 adk , 这边只需要填入appSecret 即可
+提供 sdk , 这边只需要填入appSecret 即可
 
 充值后回调，这边修改状态，不是很难
 
@@ -638,7 +627,7 @@ supplyHandlerMap.get(SupplyEnum.getHandler(getSupplyKey(OrderChildTypeEnum.PHONE
 
 ### 4. 支付和退款
 
-表：支付流水记录  退款流水记录   支付配置表   支付退款不成功回调表
+表：支付流水记录  退款流水记录   支付配置表   支付退款不成功回调表   支付只能选择一个渠道，前端用户点支付的时候会跳到微信，不会重复支付
 
 支付逻辑
 
@@ -665,7 +654,8 @@ payNotify 微信回调
 **退款逻辑**
 
 ```
-交易中心 -> 支付网关refund 接口  支付单号，退款单号-交易中心生成，退款金额，回调交易中心URL
+交易中心 /cancelOrder 判断支付完成才会调支付网关退款
+-> 支付网关refund 接口  支付单号，退款单号-交易中心生成，退款金额，回调交易中心URL
 
 refund接口 -> 校验所有的退款成功的单号，如果总退款金额>当前支付单号金额，则不给退款  
        -> 调微信预退款， 成功返回状态设置 PENDING状态，等待微信成功退款后回调
@@ -678,25 +668,7 @@ refundNotify 接口-> 微信退款回调， 此时也要回调交易中心，如
 
 下面原先的代码是有问题的，如果同时多个退款请求，可能会造成退多的情况,， 但是因为交易中心用户取消交易单的逻辑已经加了分布式锁，所以同时只会有一个请求进来退款，没有问题
 
-因为没有涉及扣减，只是涉及数据库条数，所以没有用mysql相关的锁
-
-```
-   private RefundOrder checkAndBuildRefund(RefundPaymentCmd cmd,Payment payment){
-        // 查询所有退款成功单，检验可退款金额
-        // PayStatus.SUCCEED.getValue() + , PayStatus.PENDing.getValue()  如果有一个在退款中，这里也不能让之预退款
-        // 查到的同时需要锁定，这里需要加分布式锁，不可以让同一个支付流水同时多个退款申请同时进行
-        List<RefundOrder> refundList=refundOrderRepository.queryListByPaymentId(payment.getId(), PayStatus.SUCCEED.getValue());
-        Long refundSum=0L;
-        for (RefundOrder order:refundList){
-            refundSum+=order.getRefundAmount();
-        }
-        refundSum+=cmd.getRefundAmount();
-        if (refundSum.compareTo(payment.getAmount())>0){
-            throw new BizException(ExceptionCode.REFUND_AMOUNT_IS_WRONG.getCode(),ExceptionCode.REFUND_AMOUNT_IS_WRONG.getDesc());
-        }
-```
-
-或者悲观锁 for update  将查询所有记录和校验的逻辑放到一个@Transactional 里
+或者悲观锁 for update  锁支付记录，将查询所有记录和校验的逻辑放到一个@Transactional 里
 
 ```
  /**
@@ -707,24 +679,37 @@ refundNotify 接口-> 微信退款回调， 此时也要回调交易中心，如
     @Transactional // 让下面的查询和修改在同一个事务里
     @Override
     public String deductStock(Integer productId) {
-       Stock stock = stockMapper.selecStockForUpdate(productId);
-       if(stock != null && stock.getStockNum() > 0 ){
-           stock.setStockNum(stock.getStockNum() -1);
-           int updateCount = stockMapper.updateById(stock);
-           if (updateCount > 0 ){
-               return "扣减库存成功";
-           }else{
-               return "扣减失败";
-           }
-       }
-       return "库存库存失败:商品库存不存在或者库存为0";
+       // 查询支付记录， for update 并锁住,让同一个订单只能同时有一个退款请求在执行
+    	
+       // 退款金额校验
+       // 查询所有退款流水PDNGING+SUCCESS
+       // 如果退款流水总金额 + 此次请求退款金额 > 订单总金额 ，直接异常
+    	
+    	// 校验通过 调微信预退款， 插入退款流水
+       
     }
     
     
        @Select("SELECT * FROM test.stock where product_id = #{productId} for update")
     Stock selecStockForUpdate(Integer productId);
+```
 
+分布式锁
 
+```
+   private RefundOrder checkAndBuildRefund(RefundPaymentCmd cmd,Payment payment){
+        // 查询所有退款成功单，检验可退款金额
+        // PayStatus.SUCCEED.getValue() + , PayStatus.PENDing.getValue()  如果有一个在退款中，这里也不能让之预退款
+        // 查到的同时需要锁定，这里需要对支付流水加分布式锁，不可以让同一个支付流水同时多个退款申请同时进行
+        List<RefundOrder> refundList=refundOrderRepository.queryListByPaymentId(payment.getId(), PayStatus.SUCCEED.getValue());
+        Long refundSum=0L;
+        for (RefundOrder order:refundList){
+            refundSum+=order.getRefundAmount();
+        }
+        refundSum+=cmd.getRefundAmount();
+        if (refundSum.compareTo(payment.getAmount())>0){
+            throw new BizException(ExceptionCode.REFUND_AMOUNT_IS_WRONG.getCode(),ExceptionCode.REFUND_AMOUNT_IS_WRONG.getDesc());
+        }
 ```
 
 ### 5. 转单中心
